@@ -1,3 +1,3 @@
 class Pry
-  VERSION = "0.9.7.1"
+  VERSION = "0.9.7.2"
 end
