@@ -1,3 +1,11 @@
+27/10/2011 version 0.9.7.2 hotfix
+* fixed indentation for 'super if' and 'ensure', 'next if', etc
+* refactored Pry#run_command so it can accept an eval_string parameter (so amend-line and so on can work with it)
+* changed ^D so it no longer resets indent level automatically
+
+26/10/2011 version 0.9.7.1 hotfix
+* fixed gem dependecy issues
+
 25/10/2011 version 0.9.7
 
 MAJOR NEW FEATURES:
